--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
-    "heroku": "^7.59.2"
+    "chalk": "^5.0.0",
+    "connect-session-sequelize": "^7.1.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^15.0.0",
+    "eslint": "^8.8.0",
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "figlet": "^1.5.2",
+    "heroku": "^7.59.2",
+    "inquirer": "^8.2.0"
   }
 }
